# ChangeLog

0.7.0rc4
    * Fixed printer sends info about api key change to Connect after change
    * Added the network error beep setting to the web API

0.7.0rc3 (2023-03-09)
    * Added v1 endpoints for flat filesystem structure, old struct is moved to
      files_legacy file
    * Added api/v1/update/<env> GET endpoint
    * Printer name and location are added to register url as query parameters,
      if available
    * Static Web update
        - Apply UI/UX refactoring
        - Add support for max-age cache control
        - Add control of last-modified header for snapshots
        - Add drop zone to files storage
        - Remove manual camera connection dialog
        - Migrate to files api v1
        - PrusaLink update
    * Added Force header to api/v1/files/<storage>/<path> DELETE endpoint for
      deletion of non-empty folder
    * Changed Print-After-Upload header value check for PUT
    * Added endpoint to start printing file
    * Removed the original picamera driver
    * Raspberry Pi Camera support utilizing libcamera directly
    * Hardware encoding support. (Pi Zero W manages FullHD snapshots without issues)
    * Fix "unicam" appearing when a Raspberry Pi camera is connected
    * Fix not following the configured resolution
    * Added api/v1/status endpoint
    * Added new endpoint for updating prusalink python package
    * Added api/v1/transfer endpoint

0.7.0rc2 (2022-12-09)
    * Support thermal model errors (FW 3.12)
    * USB Camera
    * SD Card fixes
    * Fix MBL data for MK2.5(S)
    * Wizard refactoring
    * Static web update
        - Cameras
        - File sorting
        - Stop dialog fixed
        - Connect status
    * API Settings moved from Wizard to Settings
    * Raspberry Pi Camera support
    * Added cache control headers for cameras snap endpoints
    * Fixed PUT upload when folders within the path does not exist
    * Cameras! Support for:
        - V4L2 cameras (webcams - MJPEG and YUYV formats supported)